fix(nav): fix font size issue on mobile

--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -14,8 +14,9 @@
     margin: 1.5em;
     @media (min-width: 375px) {
       margin: 0 0 0 1.5em;
+      width: min(9vw, 2.5rem);
     }
-    width: min(9vw, 2.5rem);
+    width: 2.5rem;
   }
 
   &__button {
@@ -43,7 +44,9 @@
     color: white;
 
     list-style: none;
-    font-size: min(3.5vw, 1rem);
+    @media (min-width: 375px) {
+      font-size: min(3.5vw, 1rem);
+    }
     font-family: v.$font-barlow-condensed;
 
     letter-spacing: 1px;
